# pyquotex2

./: .coverage  README.md  ai.html  app.py  fatherrex.py  future.html  pyproject.toml  requirements.txt  version1.py
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-05-11-architecture-maintainability.md
docs/superpowers/specs/: 2026-05-11-architecture-maintainability-design.md
examples/: 11sfixed1.py  27june1.py  27june2.py  33991.py  33992.py  33993.py  3loveyou.py  777.py  AH.py  AH2.py  AH3.py  AH4.py  AH5.py  Babe5.py  Baby2.py  Baby3.py  Baby4.py  FR1.py  FR2.py  FR3.py  IND.py  IND2.py  PA3.py  Quant4.py  TRADEIQDEV_bot_5 (1).py  TRADEIQDEV_bot_5.py  VOOTFR.py  ah6.py  ah7.py  ahforever1  ahforever2.py  baby1.py  baby3.py  babydoll.py  babydoll2.py  coco.py  coco1.py  coco2.py  coco3.py  cv.py  (+22 more)
pyquotex/: api.py  config.py  exceptions.py  expiration.py  stable_api.py
pyquotex/_api/: _waits.py  account.py  history.py  realtime.py  trading.py
pyquotex/cli/commands/: __init__.py  candles.py
pyquotex/utils/: account_type.py  async_utils.py  indicators.py  processor.py  strategy.py
pyquotex/ws/channels/: buy.py  candles.py  sell_option.py  ssid.py
pyquotex/ws/objects/: timesync.py
scripts/: seed_session_step1.py  seed_session_step2.py  seed_session_via_curlcffi.py  smoke_demo.py  snapshot_api_surface.py  surface_utils.py
tests/: conftest.py  test_api.py  test_api_surface.py  test_cache.py  test_cli_smoke.py  test_dispatch_table.py  test_expiration.py  test_import_compat.py  test_json_utils.py  test_offline_integration.py  test_processor.py  test_reconnect.py  test_streaming_indicators.py  test_tournament.py  test_types.py  test_waits.py
tests/fakes/: ws_replay_server.py
tests/fixtures/: api_surface.json
